1.6.2
=====
        * started support for Mac OS X Darwin; not yet operational
        * fixed issue with "'NoneType' object is not callable" exception on some
        clean-up routines executed from __del__ methods (CardMonitoring, ReaderMonitoring, CardConnection)

1.6.1
=====
        * maintenance release:
                - define LPCTSTR and LPTSTR for recent releases of pcsc-lite
                - print formatting of userdata in SCardHelper_PrintReaderStateList
                - updated home page and download links to point to sourceforge.net


1.6.0
=====

        * released open-source with LGPL license
